First working version 0.0.1

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,31 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.dubreuia.pythoninlayhintsplugin</id>
-    <name>python-inlay-hints-plugin</name>
+    <id>com.dubreuia.pih</id>
+    <name>Python Inlay Hints</name>
     <vendor>dubreuia</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.dubreuia.pythoninlayhintsplugin.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.dubreuia.pythoninlayhintsplugin.services.MyProjectService"/>
+        <applicationService serviceImplementation="com.dubreuia.pih.services.ApplicationService"/>
+        <projectService serviceImplementation="com.dubreuia.pih.services.ProjectService"/>
+        <lang.foldingBuilder
+                language="Python"
+                implementationClass="com.dubreuia.pih.folding.PythonVariableTypeHintFolderBuilder"/>
     </extensions>
 
     <applicationListeners>
-        <listener class="com.github.dubreuia.pythoninlayhintsplugin.listeners.MyProjectManagerListener"
+        <listener class="com.dubreuia.pih.listeners.ProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
+
+    <actions>
+        <action class="com.dubreuia.pih.actions.PythonVariableTypeInformationHintAction"
+                text="Python Variable Type Information Hint">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+    </actions>
+
 </idea-plugin>
