--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.dubreuia.pythoninlayhintsplugin
-pluginName = python-inlay-hints-plugin
+pluginGroup = com.dubreuia.pih
+pluginName = python-inlay-hints
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
@@ -12,12 +12,13 @@ pluginSinceBuild = 203
 pluginUntilBuild = 213.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType = IC
+platformType = PC
 platformVersion = 2020.3.4
+downloadSources = false
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = python-ce
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
 javaVersion = 11
