--- a/src/main/resources/messages/Bundle.properties
+++ b/src/main/resources/messages/Bundle.properties
@@ -1,3 +1,3 @@
 name=Python Inlay Hints
-applicationService=Application service
+applicationService=Python Inlay Hints starting
 projectService=Project service: {0}
