--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
+# (!) if nothing works: copy what's in https://github.com/JetBrains/intellij-platform-plugin-template
 
 pluginGroup = com.dubreuia.pih
 pluginName = python-inlay-hints
@@ -9,22 +10,19 @@ pluginVersion = 1.0.1
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 203
-pluginUntilBuild = 221.*
+pluginUntilBuild = 222.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = PC
-platformVersion = 2020.3.4
+platformVersion = 2022.1.1
 downloadSources = false
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
 platformPlugins = python-ce
 
-# Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
-
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.3
+gradleVersion = 7.5.1
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
